# net-phys

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build-windows-client.yml  build.yml  windows-builds.yml
assets/: settings.ron
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: app.rs  client.rs  main.rs  protocol.rs  server.rs  settings.rs  shared.rs
